--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.0.1"
 authors = ["Alex Yang <aleozlx@gmail.com>"]
 description = "Become someone else in your Rust app"
 license = "Apache-2.0 OR MIT"
+repository = "https://github.com/aleozlx/impersonate.git"
 build = "src/build.rs"
+links = "suexec"
