--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,8 @@ license = "Apache-2.0 OR MIT"
 repository = "https://github.com/aleozlx/impersonate.git"
 build = "src/build.rs"
 
+[dependencies]
+nix = "0.12"
+
 [build-dependencies]
 cc = "1.0"
